Change video pixels' colors by modifying rgb values
Change video pixels' colors by modifying rgb values

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     </div>
     <div>
         <button onclick="takePhoto()" style="margin-bottom: 10px;">Take Photo</button>
+        <button onclick="redEffect()"> Red Effect</button>
+        <button onclick="rgbSplit()"> RGB Split</button>
+        
         <div class="strip">
            <a id='link' ></a>
         </div>
